--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ coreapi==2.3.3
 coreschema==0.0.4
 cryptography==2.7
 defusedxml==0.6.0
+dj-database-url==0.5.0
 Django==2.2.1
 django-allauth==0.39.1
 django-cors-headers==3.0.2
@@ -13,6 +14,7 @@ django-elasticsearch-dsl==0.5.1
 django-extensions==2.1.6
 django-filter==1.1.0
 django-haystack==2.8.1
+django-heroku==0.3.1
 django-rest-auth==0.9.5
 django-rest-knox==4.1.0
 djangorestframework==3.9.4
@@ -30,6 +32,7 @@ mysql-connector-python==8.0.18
 oauthlib==3.0.1
 Pillow==6.0.0
 protobuf==3.11.1
+psycopg2==2.8.4
 pycparser==2.19
 PyJWT==1.7.1
 python-dateutil==2.8.0
@@ -41,4 +44,5 @@ six==1.12.0
 sqlparse==0.3.0
 uritemplate==3.0.0
 urllib3==1.24.2
+whitenoise==5.0.1
 Whoosh==2.7.4
