--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ djangorestframework-jwt==1.11.0
 djangorestframework-simplejwt==4.3.0
 elasticsearch==6.3.1
 elasticsearch-dsl==6.1.0
+gunicorn==20.0.4
 idna==2.8
 ipaddress==1.0.22
 itypes==1.1.0
